# django-graphql-shortener

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
core/schema/: __init__.py  mutations.py  queries.py
core/tests/: test_url_model.py
shortener/: asgi.py  settings.py  urls.py  wsgi.py
