[tool.poetry]
name = "django-graphql-shortener"
version = "0.1.0"
description = ""
authors = ["Nikita Borisowsky <nikitowsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
ariadne = "^0.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
